<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_units">Select units</string>
    <string name="select_language">Select language</string>
    <string name="minimum_temperature_threshold">Minimum temperature threshold</string>
    <string name="maximum_temperature_threshold">Maximum temperature threshold</string>
    <string name="turn_on_off_notification_alerts">Turn on/off notification alerts</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="default_min_temp">-1000</string>
    <string name="default_max_temp">1000</string>
    <string name="get_weather">Get weather</string>

    <string-array name="language_array">
        <item>af Afrikaans</item>
        <item>al Albanian</item>
        <item>ar Arabic</item>
        <item>az Azerbaijani</item>
        <item>bg Bulgarian</item>
        <item>ca Catalan</item>
        <item>cz Czech</item>
        <item>da Danish</item>
        <item>de German</item>
        <item>el Greek</item>
        <item>en English</item>
        <item>eu Basque</item>
        <item>fa Persian (Farsi)</item>
        <item>fi Finnish</item>
        <item>fr French</item>
        <item>gl Galician</item>
        <item>he Hebrew</item>
        <item>hi Hindi</item>
        <item>hr Croatian</item>
        <item>hu Hungarian</item>
        <item>id Indonesian</item>
        <item>it Italian</item>
        <item>ja Japanese</item>
        <item>kr Korean</item>
        <item>la Latvian</item>
        <item>lt Lithuanian</item>
        <item>mk Macedonian</item>
        <item>no Norwegian</item>
        <item>nl Dutch</item>
        <item>pl Polish</item>
        <item>pt Portuguese</item>
        <item>pt_br Português Brasil</item>
        <item>ro Romanian</item>
        <item>ru Russian</item>
        <item>sv, se Swedish</item>
        <item>sk Slovak</item>
        <item>sl Slovenian</item>
        <item>sp, es Spanish</item>
        <item>sr Serbian</item>
        <item>th Thai</item>
        <item>tr Turkish</item>
        <item>ua, uk Ukrainian</item>
        <item>vi Vietnamese</item>
        <item>zh_cn Chinese Simplified</item>
        <item>zh_tw Chinese Traditional</item>
        <item>zu Zulu</item>
    </string-array>

    <string-array name="units_array">
        <item>standard Kelvin</item>
        <item>metric Celsius</item>
        <item>imperial Fahrenheit</item>
    </string-array>
</resources>