<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_units" />

        <Spinner
            android:id="@+id/units_options"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/units_array" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_lang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_language" />

        <Spinner
            android:id="@+id/language_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/language_array" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/turn_on_off_notification_alerts" />

        <ToggleButton
            android:id="@+id/alert_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togglebutton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimum_temperature_threshold" />

        <EditText
            android:id="@+id/edit_min_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:text="@string/default_min_temp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maximum_temperature_threshold" />

        <EditText
            android:id="@+id/edit_max_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@string/default_max_temp" />

    </LinearLayout>

</LinearLayout>